data class Position(
    val line: Int,
    val symbolIndex: Int
)